--- a/index.html
+++ b/index.html
@@ -14,12 +14,56 @@
     <title>Todo</title>
   </head>
   <body>
+    <header class="text-light text-center p-5 mb-3">
+      <h1>Today</h1>
+      <h4 id="time">Friday, may 04, 2023</h4>
+    </header>
+    <form id="form" class="col-10 col-lg-8 mx-auto">
+      <div class="input-group">
+        <input
+          id="taskInput"
+          type="text"
+          class="form-control"
+          placeholder="Recipient's username"
+          aria-label="Recipient's username"
+          aria-describedby="button-addon2"
+        />
+        <button
+          class="btn btn-outline-secondary"
+          type="submit"
+          id="button-addon2"
+        >
+          ➕
+        </button>
+      </div>
+      <div class="row justify-content-end p-3">
+        <button class="btn text-bg-light" type="button" style="width: 100px">
+          Clear ALL
+        </button>
+      </div>
+    </form>
+    <hr />
+    <div class="col-10 col-lg-8 mx-auto my-5">
+      <ul id="todo-list" class="list-group border">
+        <li class="list-group-item p-3">
+          <input class="form-check-input me-1" id="todo-1" type="checkbox" />
+          <label class="form-check-label" for="todo-1">
+            <strike>Complete QTripDynamic</strike>
+          </label>
+        </li>
+        <li class="list-group-item p-3">
+          <input class="form-check-input me-1" id="todo-2" type="checkbox" />
+          <label class="form-check-label" for="todo-2">
+            Complete FE-2 Challenge
+          </label>
+        </li>
+      </ul>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-
     <script src="script.js"></script>
   </body>
 </html>
